@@ -8,15 +8,14 @@ import static gregtech.api.enums.Mods.GregTech;
 import static gregtech.api.enums.Mods.KubaTech;
 import static tectech.Reference.MODID;
 
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import com.cleanroommc.modularui.drawable.ColorType;
 import com.cleanroommc.modularui.drawable.UITexture;
 
 import bartworks.MainMod;
+import gregtech.api.enums.Mods;
 import gregtech.common.modularui2.util.SteamTexture;
-import kekztech.KekzCore;
 
 /**
  * Holds all the references to GUI textures used within GregTech.
@@ -217,6 +216,8 @@ public final class GTGuiTextures {
     public static final UITexture OVERLAY_COMPUTATION_LOSS = UITexture
         .fullImage(GregTech.ID, "gui/icons/stalled_computation");
     public static final UITexture OVERLAY_UNPOWERED = UITexture.fullImage(GregTech.ID, "gui/icons/unpowered");
+    public static final UITexture OVERLAY_ROTOR = UITexture.fullImage(GregTech.ID, "gui/picture/noRotor");
+    public static final UITexture OVERLAY_WIND = UITexture.fullImage(GregTech.ID, "gui/picture/wind");
 
     public static final UITexture OVERLAY_NO_MAINTENANCE_ISSUES = UITexture
         .fullImage(GregTech.ID, "gui/icons/maintenance_none");
@@ -1001,7 +1002,7 @@ public final class GTGuiTextures {
                 .fullImage()
                 .location(GregTech.ID, "gui/overlay_slot/number_" + i)
                 .build())
-        .collect(Collectors.toList())
+        .toList()
         .toArray(new UITexture[0]);
 
     public static final UITexture OVERLAY_TOOLBOX_WRENCH = UITexture.builder()
@@ -1063,6 +1064,11 @@ public final class GTGuiTextures {
         .canApplyTheme()
         .build();
     public static final UITexture PROGRESSBAR_ARROW_BBF = fullImageColorableGT("progressbar/arrow_bbf");
+    public static final UITexture PROGRESSBAR_WINDMILL_GRINDSTONE = UITexture.builder()
+        .location(GregTech.ID, "gui/progressbar/windmill_grindstone")
+        .fullImage()
+        .name(GTTextureIds.PROGRESSBAR_WINDMILL_GRINDSTONE)
+        .build();
     public static final UITexture PROGRESSBAR_BOILER_HEAT = UITexture.builder()
         .location(GregTech.ID, "gui/progressbar/boiler_heat")
         .fullImage()
@@ -1514,16 +1520,16 @@ public final class GTGuiTextures {
         .fullImage(GregTech.ID, "gui/overlay_button/plus_large");
 
     public static final UITexture OVERLAY_BUTTON_WIRELESS_ON = fullImage(
-        KekzCore.MODID,
+        Mods.ModIDs.KEKZ_TECH,
         "gui/overlay_button/wireless_on");
     public static final UITexture OVERLAY_BUTTON_WIRELESS_OFF = fullImage(
-        KekzCore.MODID,
+        Mods.ModIDs.KEKZ_TECH,
         "gui/overlay_button/wireless_off");
     public static final UITexture OVERLAY_BUTTON_WIRELESS_DISABLED = fullImage(
-        KekzCore.MODID,
+        Mods.ModIDs.KEKZ_TECH,
         "gui/overlay_button/wireless_off_disabled");
     public static final UITexture OVERLAY_BUTTON_WIRELESS_REBALANCE = fullImage(
-        KekzCore.MODID,
+        Mods.ModIDs.KEKZ_TECH,
         "gui/overlay_button/wireless_rebalance");
     public static final UITexture TT_OVERLAY_BUTTON_POWER_SWITCH_ON = UITexture.builder()
         .location(MODID, "gui/overlay_button/power_switch_on")
